Mettre le contenu en francais

--- a/content/404.md
+++ b/content/404.md
@@ -2,9 +2,9 @@
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
-# Content not found.
+# Page introuvable.
 
-Go <a href="index.njk">home</a>.
+Retourner à <a href="/">l'accueil</a>.
 
 <!--
 
